# trash

./: .gitignore  MonteCarlo.py  Sprial numbers.py  Working with table.txt  alt tab.bat  alt tab.py  async_fetch.py  auto accept.bat  auto accept.py  blockcheck2-regex.py  calc-collection-size.js  calc-collection-size.py  cards-proxy-compile.bat  cards-proxy.cpp  create_some_tables.py  delete-files-in-folder.py  factorio-download-mods.py  ffmpeg-get-audio-from-all-mp4.bat  find font for symbol.py  fmods.txt  fmods2.txt  fmods3.txt  fractal.py  golf.py  graph.cs  hold w.py  jutsu+.js  maps.md  maps2.md  maps3.md  mem.c  nmrih-sound.py  nslookup-to-tcpping.sh  osu-dl-collection.py  plots.py  proxy_test.py  ps5-forward-to-WARP.sh  test.html  test.js  test.py  (+6 more)
ahk/: a d spam.ahk  alt tab.ahk  currentscript_0.ahk  lmb-spam.ahk  macro-recorder-mouse.ahk  mouse-move.ahk  prop-fly.ahk  temp-recoreder-mouse.ahk  window-to-center.ahk
buildGDAL-3.11.0/: buildGDAL.bat  buildPROJ.bat  buildSQLITE3.bat
convert-colormap/: colormap.txt  colormap_formatted.txt  main.py
cpp_tiff/: Tif.cpp  Tif.hpp
gdal_related/: buildGDAL.bat  buildPNG.bat  buildPROJ.bat  buildSQLITE3.bat  buildTIFF.bat  buildZLIB.bat  concat.py
gebco/: File.cpp  File.hpp  GEBCO.cpp  GEBCO.hpp  structure.txt
imgui-builds/: CMakeLists.txt  release.bat
macros/: LMB press.ahk  RMB press.ahk  a.ahk  alt tab.ahk  auto_accept.ahk  test.ahk  trove fishing.ahk
pico/: VaultDoorTraining.java  crackme-edited.py  decimal-ascii.txt  keygenme-trial.py  new_caesar.py  otp.py  rot13.py  rsa-decryption.py  stonks.py  to-ascii.py  transformation.py
sven-coop/: adjustnumbers.py  adminshit.txt  config.py  create.bat  create.py  cstagged.txt  dop.py  favs.json  history.json  history.py  hlam.qss  idk.txt  king-emotes-frames.cfg  king-emotes-frames.py  king-emotes.cfg  king-emotes.py  king-skins.cfg  king-skins.py  king.html  kz.bat  kz.py  kz_maps.txt  loop.bat  loop.py  main.py  maps-fav.txt  (+9 more)
texture-test/: .env.cmake  CMakeLists.txt  release.bat
texture-test/src/: defines.hpp  hsv.hpp  main.cpp  pch.h
(+12 files in other folders)
